layout issues

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   background-image: url("./images/background2.jpg")
 }
 
-*{
+* {
   box-sizing: border-box;
   font-family: fantasy;
   color: cornsilk;
@@ -21,34 +21,28 @@ body {
   }
 
 .aboutme {
-    font-style: italic;
-    grid-template-columns: 1fr 1fr;
-    display: grid;
-    width: 100%;
-    height:fit-content;
-    padding: 5px;
-    border: 5px solid rgb(3, 3, 55); 
+  max-width: 1300px;
+  margin: 40px auto 0 auto;
+  line-height: 165;
+  padding: 20px 50px;
+  display: flex;
   }
   
+.intro {
+  flex: 3;
+  order: 2;
+}
+
  .picofme {
-    display: flex;
-    justify-content: left;
-    flex-wrap: nowrap;
-    width: 300px;
-    height: 300px;
+  flex: 1;
+  order: 1;
   }
 
-.grid-container-element { 
-    display: grid; 
-    grid-template-columns: 1fr 1fr; 
-    grid-gap: 20px; 
-    border: 1px solid black; 
-    width: 100%; 
-} 
-.grid-child-element { 
-    margin: 10px; 
-    border: 1px solid rgba(212, 125, 11, 0.327); 
-}
+  .qualities {
+    flex: 1;
+    order: 3;
+  }
+
 
 
 
